# News-Restructure

./: .env.example  .gitignore  README.md  create_project_structure.py  pyproject.toml  requirements-test.txt  run.py
config/: development.yaml
src/application/agents/: base.py  deduplication_agent.py  entity_agent.py  query_processor_agent.py  query_router_agent.py  sentiment_agent.py  stock_impact_agent.py  supply_chain_agent.py
src/application/nodes/ingestion/: deduplication_node.py  entity_extraction_node.py  impact_mapping_node.py  indexing_node.py  ingestion_node.py  sentiment_analysis_node.py  supply_chain_node.py
src/application/nodes/query/: query_node.py
src/application/use_cases/: execute_query.py  process_article.py
src/application/workflows/: ingestion_graph.py  query_graph.py  state.py
src/configuration/: loader.py  settings.py
src/domain/models/: article.py  entities.py  query.py  sentiment.py  stock_impact.py  supply_chain.py
src/domain/services/: deduplication_logic.py  entity_normalization.py  impact_scoring.py  sentiment_scoring.py  supply_chain_service.py
src/infrastructure/llm/: base.py  groq_client.py  prompt_builder.py
src/infrastructure/storage/cache/: redis_cache.py
src/infrastructure/storage/mongodb/: article_repository.py  client.py  queries.py
src/infrastructure/storage/vector/: chroma_client.py  embeddings.py
src/interfaces/rest/: app.py  dependencies.py
src/shared/exceptions/: domain_exceptions.py  infrastructure_exceptions.py  validation_exceptions.py
src/shared/logging/: logger.py
(+7 files in other folders)
