[project]
name = "marketmuni"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "spacy>=3.8.11",
    "chromadb>=1.3.5",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "pyyaml>=6.0.0",
    "langchain-groq>=0.1.0",
    "pytest>=7.4.0",
    "python-dotenv",
    "redis>=7.1.0",
    "pymongo>=4.15.5",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "freezegun>=1.2.0",
    "faker>=19.0.0",
    "responses>=0.23.0",
    "pytest-clarity>=1.0.0",
    "pytest-sugar>=0.9.7",
]


